End of video 1 and video 2 completed

--- a/Responsive Header with media querys/index.html
+++ b/Responsive Header with media querys/index.html
@@ -12,10 +12,10 @@
                         <img src="LogoKrey.png" alt="" class="logo">
                     </div>
                     <div class="menuContainer" id="Menu">
-                        <span class="menuItem"><a href="#" class="menuItemLink">Inicio</a></span>
-                        <span class="menuItem"><a href="#" class="menuItemLink">Proyectos</a></span>
-                        <span class="menuItem"><a href="#" class="menuItemLink">Sobre Mí</a></span>
-                        <span class="menuItem"><a href="#" class="menuItemLink">Contacto</a></span>
+                        <span class="menuItem"><a href="" class="menuItemLink">Inicio</a></span>
+                        <span class="menuItem"><a href="" class="menuItemLink">Proyectos</a></span>
+                        <span class="menuItem"><a href="" class="menuItemLink">Sobre Mí</a></span>
+                        <span class="menuItem"><a href="" class="menuItemLink">Contacto</a></span>
                     </div>
 
                     <div class="menuHamburguer" id="Hamburguer">
@@ -23,12 +23,11 @@
                         <span class="line"></span>
                         <span class="line"></span>
                     </div>
-
                 </div>
             </div>
         </div>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="text/javascript" src="code.js"></script>  
+        <script src="code.js"></script>
     </body>
+
 </html>
