--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -25,22 +25,22 @@
                     <a href="" class="buttonHero">See more</a>
                 </div>
                 <div class="socialIconsContainer">
-                    <div class="iconSocial"></div>
-                    <div class="iconSocial"></div>
-                    <div class="iconSocial"></div>
+                    <div class="iconSocial" style="background-image: url(InstaLogo.png);"></div>
+                    <div class="iconSocial" style="background-image: url(TwitterLogo.png);"></div>
+                    <div class="iconSocial" style="background-image: url(YTLogo.png);"></div>
                 </div>
             </div>
             <div class="rightSide">
-                   <svg width="830" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.5;">
+                   <svg width="49vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.3;">
                     <g>
                      <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
                     </g>
                    </svg>
-                   <svg width="800" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.6;">
+                   <svg width="48vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.6;">
 
                     <defs>
                         <pattern id="img1" patternUnits="userSpaceOnUse" width="800" height="100vh">
-                          <image href="Gaming.jpg" x="0" y="0" length="auto" width="600" height="700" preserveAspectRatio="xMidYMid slice" />
+                          <image href="Gaming.jpg" x="0" y="0" length="auto" width="700" height="700" preserveAspectRatio="xMidYMid slice" />
                         </pattern>
                       </defs>
 
@@ -48,7 +48,7 @@
                      <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5); " stroke="none" fill="url(#img1)"/>
                     </g>
                    </svg>
-                   <svg width="860" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.2; filter: drop-shadow(-4px -13px 23px #00FFA0);">
+                   <svg width="50vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.2; filter: drop-shadow(-4px -13px 23px #00FFA0);">
                     <g>
                      <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
                     </g>
