--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Gaming Section</title>
+        <title>Gaming Hero</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -14,48 +14,46 @@
                 <span class="menuItem"><a href="" class="menuItemLink">Juegos</a></span>
                 <span class="menuItem"><a href="" class="menuItemLink">Merch</a></span>
                 <span class="menuItem"><a href="" class="menuItemLink">Torneos</a></span>
-                <span class="menuItem"><a href="" class="menuItemButton">Contacto</a></span>
+                <span class="menuItem"><a href="" class="menuItemLink">Contacto</a></span>
             </div>
         </div>
+
+        <!--Hero Section-->
         <div class="heroSection">
             <div class="leftSide">
                 <div class="heroTextContainer">
                     <h1 class="mainTextHero">Gaming Hero</h1>
-                    <h4 class="secondTextHero">Lore ipsum example text for header.</h4>
-                    <a href="" class="buttonHero">See more</a>
+                    <h4 class="secondTextHero">Lore ipsum example text for hero.</h4>
+                    <a href="#" class="buttonHero">See More</a>
                 </div>
                 <div class="socialIconsContainer">
-                    <div class="iconSocial" style="background-image: url(InstaLogo.png);"></div>
                     <div class="iconSocial" style="background-image: url(TwitterLogo.png);"></div>
+                    <div class="iconSocial" style="background-image: url(InstaLogo.png);"></div>
                     <div class="iconSocial" style="background-image: url(YTLogo.png);"></div>
                 </div>
             </div>
             <div class="rightSide">
-                   <svg width="49vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.3;">
+                <svg width="49vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.3;">
                     <g>
-                     <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
+                        <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
                     </g>
-                   </svg>
-                   <svg width="48vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.6;">
-
+                </svg>
+                <svg width="48vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.6;">
                     <defs>
-                        <pattern id="img1" patternUnits="userSpaceOnUse" width="800" height="100vh">
-                          <image href="Gaming.jpg" x="0" y="0" length="auto" width="700" height="700" preserveAspectRatio="xMidYMid slice" />
+                        <pattern id="backIMG" patternUnits="userSpaceOnUse" width="800" height="100vh">
+                            <image href="Gaming.jpg" x="0" y="0" length="auto" width="700" height="700" preserveAspectRatio="xMidYMid slice" />
                         </pattern>
-                      </defs>
-
+                    </defs>
                     <g>
-                     <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5); " stroke="none" fill="url(#img1)"/>
+                        <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="url(#backIMG)"/>
                     </g>
-                   </svg>
-                   <svg width="50vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.2; filter: drop-shadow(-4px -13px 23px #00FFA0);">
+                </svg>
+                <svg width="50vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.2; filter: drop-shadow(-4px -13px 23px #00ffa0);">
                     <g>
-                     <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
+                        <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
                     </g>
-                   </svg>
+                </svg>
             </div>
         </div>
-        
-
     </body>
 </html>
