--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -5,16 +5,19 @@
     </head>
 
     <body>
+        <div class="backgroundContainer">
+            <img src="GamingLogo.png" alt="" class="backgroundImage">
+        </div>
         <div class="headerSection">
             <div class="logoContainer">
-                <img src="LogoKrey.png" alt="" class="logo">
+                <img src="GamingLogo.png" alt="" class="logo">
             </div>
             <div class="menuContainer">
-                <span class="menuItem"><a href="" class="menuItemLink">Inicio</a></span>
-                <span class="menuItem"><a href="" class="menuItemLink">Juegos</a></span>
-                <span class="menuItem"><a href="" class="menuItemLink">Merch</a></span>
-                <span class="menuItem"><a href="" class="menuItemLink">Torneos</a></span>
-                <span class="menuItem"><a href="" class="menuItemLink">Contacto</a></span>
+                <span class="menuItem"><a href="" class="menuItemLink">Home</a></span>
+                <span class="menuItem"><a href="" class="menuItemLink">Teams</a></span>
+                <span class="menuItem"><a href="" class="menuItemLink">Matches</a></span>
+                <span class="menuItem"><a href="" class="menuItemLink">News</a></span>
+                <span class="menuItem"><a href="" class="menuItemLink">Contact</a></span>
             </div>
         </div>
 
@@ -22,38 +25,38 @@
         <div class="heroSection">
             <div class="leftSide">
                 <div class="heroTextContainer">
-                    <h1 class="mainTextHero">Gaming Hero</h1>
-                    <h4 class="secondTextHero">Lore ipsum example text for hero.</h4>
+                    <h1 class="mainTextHero">Game changing</h1>
+                    <h2 class="secondTextHero">Make your gaming experience reach another level with us.</h2>
                     <a href="#" class="buttonHero">See More</a>
-                </div>
-                <div class="socialIconsContainer">
-                    <div class="iconSocial" style="background-image: url(TwitterLogo.png);"></div>
-                    <div class="iconSocial" style="background-image: url(InstaLogo.png);"></div>
-                    <div class="iconSocial" style="background-image: url(YTLogo.png);"></div>
                 </div>
             </div>
             <div class="rightSide">
-                <svg width="49vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.3;">
-                    <g>
-                        <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
-                    </g>
-                </svg>
-                <svg width="48vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.6;">
-                    <defs>
-                        <pattern id="backIMG" patternUnits="userSpaceOnUse" width="800" height="100vh">
-                            <image href="Gaming.jpg" x="0" y="0" length="auto" width="700" height="700" preserveAspectRatio="xMidYMid slice" />
-                        </pattern>
-                    </defs>
-                    <g>
-                        <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="url(#backIMG)"/>
-                    </g>
-                </svg>
-                <svg width="50vw" height="100vh" xmlns="http://www.w3.org/2000/svg" style="position: absolute; right: 0; opacity: 0.2; filter: drop-shadow(-4px -13px 23px #00ffa0);">
-                    <g>
-                        <path id="svg_1" d="m0.5,0.45313c0,0 -8,111 93,185c101,74 145,91 178,174c33,83 1,140 86,243l84.5,102.54687l474,-50c0.5,0.45313 7.5,-628.54687 7.5,-630.54687c0,-2 -250,-108.00001 -250.5,-107.45313c0.5,-0.54688 -406.5,3.45312 -407,4c0.5,-0.54688 -265.5,79.45313 -265.5,79.45313z" style="transform: scale(1.5);" stroke="none" fill="#00A769"/>
-                    </g>
-                </svg>
+                
             </div>
         </div>
+
+        <!--Teams Section-->
+        <div class="teamsSection">
+            <div class="teamsSectionContainer">
+                <h2 class="teamsSectionTitle">TEAMS</h2>
+                <h4 class="teamsSectionSubTitle">Meet the true heros.</h4>
+                <div class="teamsContainer">
+                    <div class="teamContainer">
+                        <img src="Teams/Counter.png" alt="" class="teamBackgroundImage">
+                        <img src="Teams/Logo CSGO.png" alt="" class="gameLogo">
+                    </div>
+                    <div class="teamContainer">
+                        <img src="Teams/LOL.png" alt="" class="teamBackgroundImage" style="height: 100%; width: auto;">
+                        <img src="Teams/Logo LOL Blanco.png" alt="" class="gameLogo">
+                    </div>
+                    <div class="teamContainer">
+                        <img src="Teams/Valorant.png" alt="" class="teamBackgroundImage" style="height: 100%; width: auto;">
+                        <img src="Teams/Logo Valorant Blanco.png" alt="" class="gameLogo">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </body>
 </html>
