Matches Section Completed

--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -58,5 +58,80 @@
         </div>
 
 
+
+        <!--Matches Section-->
+        <div class="matchesSection">
+            <div class="matchesSectionContainer">
+                <h2 class="matchesSectionTitle">Matches</h2>
+                <h4 class="matchesSectionSubTitle">Be part of the game. Never miss any match.</h4>
+                <div class="matchesContainer">
+                    <div class="matchContainer" style="background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(Teams/LOL.png);">
+                        <div class="gameLogoContainer">
+                            <img src="Teams/Logo LOL Blanco.png" alt="" class="matchGameLogo">
+                        </div>
+                        <div class="teamsMatchContainer">
+                            <div class="leftTeam">
+                                <img src="Matches/GamingLogo.png" alt="" class="leftTeamLogo">
+                                <h3 class="teamName">Team one</h3>
+                            </div>
+                            <div class="rightTeam">
+                                <img src="Matches/Logo Giants.png" alt="" class="rightTeamLogo">
+                                <h3 class="teamName">Giants</h3>
+                            </div>
+                        </div>
+                        <div class="matchInfoContainer">
+                            <span class="matchDate">March 2, 2021</span>
+                            <span class="matchTime">0:30AM</span>
+                            <a href="#" class="viewMatchLink">Watch</a>
+                        </div>
+
+                    </div>
+                    <div class="matchContainer" style="background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(Teams/Counter.png);">
+                        <div class="gameLogoContainer">
+                            <img src="Teams/Logo CSGO.png" alt="" class="matchGameLogo">
+                        </div>
+                        <div class="teamsMatchContainer">
+                            <div class="leftTeam">
+                                <img src="Matches/GamingLogo.png" alt="" class="leftTeamLogo">
+                                <h3 class="teamName">Team one</h3>
+                            </div>
+                            <div class="rightTeam">
+                                <img src="Matches/Heretics.png" alt="" class="rightTeamLogo">
+                                <h3 class="teamName">Heretics</h3>
+                            </div>
+                        </div>
+                        <div class="matchInfoContainer">
+                            <span class="matchDate">March 8, 2021</span>
+                            <span class="matchTime">2:00AM</span>
+                            <a href="#" class="viewMatchLink">Watch</a>
+                        </div>
+
+                    </div>
+                    <div class="matchContainer" style="background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(Teams/Counter.png);">
+                        <div class="gameLogoContainer">
+                            <img src="Teams/Logo CSGO.png" alt="" class="matchGameLogo">
+                        </div>
+                        <div class="teamsMatchContainer">
+                            <div class="leftTeam">
+                                <img src="Matches/GamingLogo.png" alt="" class="leftTeamLogo">
+                                <h3 class="teamName">Team one</h3>
+                            </div>
+                            <div class="rightTeam">
+                                <img src="Matches/Logo Giants.png" alt="" class="rightTeamLogo">
+                                <h3 class="teamName">Giants</h3>
+                            </div>
+                        </div>
+                        <div class="matchInfoContainer">
+                            <span class="matchDate">March 18, 2021</span>
+                            <span class="matchTime">3:45AM</span>
+                            <a href="#" class="viewMatchLink">Watch</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </body>
 </html>
