News and Contact Section completed

--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -132,6 +132,95 @@
             </div>
         </div>
 
+        <!--News Section-->
+        <div class="newsSection">
+            <div class="newsSectionContainer">
+                <h2 class="newsSectionTitle">News</h2>
+                <h4 class="newsSectionSubTitle">Be part of the game. Never miss any match.</h4>
+                <div class="newsContainer">
+                    <div class="newContainer" style="background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(Teams/LOL.png);">
+                        <div class="viewMoreContainer"></div>
+                        <a href="" class="viewMoreNewsButton">Read more</a>
+                        <div class="newInfoContainer">
+                            <h3 class="newTitle">NEW ROSTER</h3>
+                            <span class="newDescription">Check our new LoL roster fo 2021 season.
+                                Lore ipsun for more info text that is not 
+                                used in this moment.</span>
+                            <span class="newDate">February 12, 2021</span>
+                        </div>
+
+                    </div>
+
+                    <div class="newContainer" style="background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(Teams/Valorant.png);">
+                        <div class="viewMoreContainer"></div>
+                        <a href="" class="viewMoreNewsButton">Read more</a>
+                        <div class="newInfoContainer">
+                            <h3 class="newTitle">VALORANT UPDATE</h3>
+                            <span class="newDescription">New Valorant update for our team...
+                                Lore ipsun for more info text that is not 
+                                used in this moment.</span>
+                            <span class="newDate">February 15, 2021</span>
+                        </div>
+
+                    </div>
+
+                    <div class="newContainer" style="background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(News/LOL2.png);">
+                        <div class="viewMoreContainer"></div>
+                        <a href="" class="viewMoreNewsButton">Read more</a>
+                        <div class="newInfoContainer">
+                            <h3 class="newTitle">NEW LOL MERCH</h3>
+                            <span class="newDescription">Our League of Legends merch is available.
+                                Lore ipsun for more info text that is not 
+                                used in this moment.</span>
+                            <span class="newDate">February 15, 2021</span>
+                        </div>
+
+                    </div>
+                                        
+                </div>
+            </div>
+        </div>
+
+
+        <!--Contact Section-->
+        <div class="contactSection">
+            <div class="contactSectionContainer">
+                <h2 class="contactSectionTitle">News</h2>
+                <h4 class="contactSectionSubTitle">Be part of the game. Never miss any match.</h4>
+                <div class="contactContentContainer">
+                    <form action="" method="post">
+                        <div class="firstLineForm">
+                            <div class="inputContainer">
+                                <label for="name" class="inputLabel">Name</label>
+                                <input class="nameInput" type="text" name="name" id="">
+                                <span class="inputLine"></span>
+                                <span class="inputLine2"></span>
+                            </div>
+                            <div class="inputContainer">
+                                <label for="email" class="inputLabel">Email</label>
+                                <input class="nameInput" type="email" name="email" id="">
+                                <span class="inputLine"></span>
+                                <span class="inputLine2"></span>
+                            </div>
+                        </div>
+                        <div class="inputContainer" style="width: 100%; margin-right: 0;">
+                            <label for="subject" class="inputLabel">Subject</label>
+                            <input class="nameInput" type="text" name="subject" id="">
+                            <span class="inputLine"></span>
+                            <span class="inputLine2"></span>
+                        </div>
+                        <div class="inputContainer" style="width: 100%; margin-right: 0; height: 400px">
+                            <label for="subject" class="inputLabel">Message</label>
+                            <textarea class="textArea" type="text" name="subject" id=""></textarea>
+                            <span class="inputLine"></span>
+                            <span class="inputLine2"></span>
+                        </div>
+
+                        <input class="sendButton" type="button" value="send">
+                    </form>
+                </div>
+            </div>
+        </div>
 
     </body>
 </html>
