Side Details added

--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -36,7 +36,8 @@
         </div>
 
         <!--Teams Section-->
-        <div class="teamsSection">
+        <img src="ShapeWebsite.png" alt="" class="shapeBackground" id="ShapeLeft">
+        <div class="teamsSection" id="Teams">
             <div class="teamsSectionContainer">
                 <h2 class="teamsSectionTitle">TEAMS</h2>
                 <h4 class="teamsSectionSubTitle">Meet the true heros.</h4>
@@ -221,6 +222,9 @@
                 </div>
             </div>
         </div>
-
+        <img src="ShapeWebsite.png" alt="" class="shapeBackground2">
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="code.js"></script>
     </body>
 </html>
