--- a/Gaming Hero Section with header/pruebas.html
+++ b/Gaming Hero Section with header/pruebas.html
@@ -1,5 +1,7 @@
 <div class="content">
-    <img src="ShapeWebsite.png" alt="" class="shape">
+    <div class="part1"></div>
+    <div class="part1"></div>
+    <div class="part2"></div>
 </div>
 
 <style>
@@ -12,17 +14,38 @@
         padding: 0;
         width: 100%;
         height: 200vh;
-        background-color: white;
+        background-color: #121212;
         position: relative;
+        overflow: hidden;
     }
 
-    .shape{
-        height: 100%;
-        width: auto;
-        object-fit: contain;
+    .part1{
         position: absolute;
-        right: 0;
         top: 0;
+        right: 0;
+        margin: 0 -10% 0 0;
+        transform: skewX(15deg);
+        height: 100vh;
+        width: 50%;
+        background: linear-gradient(-30deg, #00A800, #000000);
+        opacity: 0.5;
+    }
+
+    .part1:nth-child(2){
+        margin: 0 -12% 0 0;
+        opacity: 0.7;
+    }
+
+    .part2{
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: -5% -16% 0 0;
+        transform: skewX(15deg) rotate(10deg);
+        height: 120vh;
+        width: 50%;
+        background: linear-gradient(-30deg, #00A800, #000000);
+        opacity: 1;
     }
 
 </style>
