--- a/Gaming Hero Section with header/index.html
+++ b/Gaming Hero Section with header/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <!--Hero Section-->
-        <div class="heroSection">
+        <div class="heroSection" id="Hero">
             <video playsinline autoplay loop muted src="VideoBackground.webm" class="backgroundHeroVideo"></video>
             <div class="leftSide">
                 <div class="heroTextContainer">
@@ -52,11 +52,11 @@
                         <img src="Teams/Logo CSGO.png" alt="" class="gameLogo">
                     </div>
                     <div class="teamContainer">
-                        <img src="Teams/LOL.png" alt="" class="teamBackgroundImage" style="height: 100%; width: auto;">
+                        <img src="Teams/LOL.png" alt="" class="teamBackgroundImage" style="height: 100%; width: 100%;">
                         <img src="Teams/Logo LOL Blanco.png" alt="" class="gameLogo">
                     </div>
                     <div class="teamContainer">
-                        <img src="Teams/Valorant.png" alt="" class="teamBackgroundImage" style="height: 100%; width: auto;">
+                        <img src="Teams/Valorant.png" alt="" class="teamBackgroundImage" style="height: 100%; width: 100%;">
                         <img src="Teams/Logo Valorant Blanco.png" alt="" class="gameLogo">
                     </div>
                 </div>
@@ -191,8 +191,8 @@
         <!--Contact Section-->
         <div class="contactSection">
             <div class="contactSectionContainer">
-                <h2 class="contactSectionTitle">News</h2>
-                <h4 class="contactSectionSubTitle">Be part of the game. Never miss any match.</h4>
+                <h2 class="contactSectionTitle">Contact</h2>
+                <h4 class="contactSectionSubTitle">Need to tell us something? Fill the form and we'll answer as son as possible.</h4>
                 <div class="contactContentContainer">
                     <form action="" method="post">
                         <div class="firstLineForm">
