Finished and Responsie

--- a/Sliding Content (Photography Web)/index.html
+++ b/Sliding Content (Photography Web)/index.html
@@ -8,12 +8,13 @@
     <title>Photography Portfolio</title>
 </head>
 <body>
-
+    
     <main class="website-container">
         <header class="website-header">
             <div class="logo-container">
                 <h3 class="logo">Photography</h3>
             </div>
+
             <nav class="menu-container">
                 <ul>
                     <li class="menu-item"><a href="#">Work</a></li>
@@ -30,8 +31,9 @@
             <img src="Resources/Pin.png" alt="" class="social-icon">
         </div>
 
-        <span class="control-left" id="Prev">Previous project</span>
-        <span class="control-right" id="Next">Next project</span>
+        <span class="control-left" id="Prev">Previous Project</span>
+        <span class="control-right" id="Next">Next Project</span>
+
 
         <div class="slides-container">
             <img src="Resources/Germany.jpg" alt="" class="background-image" id="Image">
@@ -41,7 +43,7 @@
                         <h5 class="subtitle">discover</h5>
                         <h1 class="title">germany</h1>
                     </div>
-                    <div class="text-slide-one"id="Two">
+                    <div class="text-slide-one" id="Two">
                         <h5 class="subtitle">discover</h5>
                         <h1 class="title">vietnam</h1>
                     </div>
@@ -55,11 +57,10 @@
                     </div>
                 </div>
             </div>
+        
         </div>
-
-        <script src="code.js"></script>
-
-
     </main>
+
+    <script src="code.js"></script>
 </body>
 </html>
