Completed Product Page

--- a/Video Background/index.html
+++ b/Video Background/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-    <video class="background" autoplay muted loop src="Video.mp4"></video>
+    <video src="Video.mp4" autoplay muted loop class="background"></video>
 
     <div class="content">
         <h1>Welcome to Krey Academy!</h1>
     </div>
-    
+
 </body>
 </html>
