Slideshow HTML CSS Code Updated

--- a/Slideshow HTML CSS JS/index.html
+++ b/Slideshow HTML CSS JS/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-   <main class="website-container">
+   <main>
        <header class="website-header">
            <div class="logo-container">
                <h3 class="logo">Krey Academy</h3>
@@ -29,19 +29,6 @@
 
        <div class="slides-container">
            <img src="Resources/Imagen1.jpg" alt="" class="background-image" id="Image">
-            <!--<div class="text-container">
-                <div id="Slider">
-                    <div class="text-slide-one" id="One">
-                        <h1 class="title">enjoy the ride</h1>
-                    </div>
-                    <div class="text-slide-one" id="Two">
-                        <h1 class="title">feel the street</h1>
-                    </div>
-                    <div class="text-slide-one" id="Three">
-                        <h1 class="title">green vives</h1>
-                    </div>
-                </div>
-            </div>-->
         </div>
 
    </main>
