Portafolio Estilo Instagram

--- a/Custom Selectboxes/index.html
+++ b/Custom Selectboxes/index.html
@@ -10,17 +10,17 @@
 <body>
 
     <div class="select" tabindex="1">
-        <input class="option-select" name="test" type="radio" id="opt1" checked>
+        <input type="radio" class="option-select" name="test" id="opt1" checked>
         <label for="opt1" class="option">Option1</label>
-        <input class="option-select" name="test" type="radio" id="opt2">
+        <input type="radio" class="option-select" name="test" id="opt2" checked>
         <label for="opt2" class="option">Option2</label>
-        <input class="option-select" name="test" type="radio" id="opt3">
+        <input type="radio" class="option-select" name="test" id="opt3" checked>
         <label for="opt3" class="option">Option3</label>
-        <input class="option-select" name="test" type="radio" id="opt4">
+        <input type="radio" class="option-select" name="test" id="opt4" checked>
         <label for="opt4" class="option">Option4</label>
-        <input class="option-select" name="test" type="radio" id="opt5">
+        <input type="radio" class="option-select" name="test" id="opt5" checked>
         <label for="opt5" class="option">Option5</label>
-      </div>
+    </div>
     
 </body>
 </html>
